# opsmodelviewer

./: .gitignore  README.rst  environment.yml  setup.cfg  setup.py  tasks.py
examples/: strongback.html  strongback.json  strongback.py  strongback_example.py
pkg/: meta.yaml
src/: opsmodelviewer.py
src/opsmodelviewer/: __init__.py
tests/: test_tagspec.py
