[metadata]
name = opsmodelviewer
version = file: src/opsmodelviewer/__version__
author = Peter Talley
author_email = ptalley2@vols.utk.edu
description = A viewer for 2D OpenSees models.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/otaithleigh/opsmodelviewer
license = MIT

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Visualization

[options]
python_requires = >=3.8
install_requires =
    bokeh>=2.0
    pandas
package_dir =
    =src
packages =
    opsmodelviewer

[options.entry_points]
console_scripts =
    opsmodelviewer = opsmodelviewer:main

[options.package_data]
opsmodelviewer =
    __version__
